--- a/letters.html
+++ b/letters.html
@@ -1,6 +1,6 @@
 <html ng-app>
 <head>
-  <title></title>
+  <title>Letters on HTML5 Canvas</title>
   <link rel="stylesheet" type="text/css" href="letters.css" />
 
   <!-- Placeholder for external font loading. -->
